# Hello-world

./: .gitlab-ci.yml  CMakeLists.txt  README.md  main.c  main.cpp
.github/workflows/: cmake.yml
src/: main.cpp
